--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ dj-database-url==0.3.0
 dj-static==0.0.6
 django-toolbelt==0.0.1
 gunicorn==19.1.1
-psycopg2==2.5.1
 pystache==0.5.4
+requests==2.4.1
 static==1.0.2
 static3==0.5.1
 wsgiref==0.1.2
